tests/predator-regre/test-0047.err
test-0047.c:19:29: error: invalid dereference
test-0047.c:35:20: note: from call of insert_item()
test-0047.c:29:5: note: from call of main()
test-0047.c:31:18: warning: memory leak detected while destroying a variable on stack
